# alined

./: CMakeLists.txt  README.md  README.md~  package.xml
include/alined/: alined.hpp
src/code_base/: alined.cpp
src/ros_nodes/: alined_test_node.cpp
